--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipe</title>
-    <script src="https://kit.fontawesome.com/1097d30f85.js" crossorigin="anonymous"></script> 
-</head>
-<body>
-    <header>
-        <nav class="navbar">
-            <a href="#" class="navbar__logo"><i class="fa-solid fa-kitchen-set fa-5x"></i></a>
-            <a href="#" class="navbar__recipes">Recipes (6)</a>
-            <div class="navbar__hamburger">
-                <span><i class="fa-solid fa-bars"></i></span>
-                <span><i class="fa-solid fa-xmark"></i></span>
-            </div>
-        </nav>
-    </header>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Recipe</title>
+        <script src="https://kit.fontawesome.com/1097d30f85.js" crossorigin="anonymous"></script> 
+    </head>
+    <body>
+        <header>
+            <nav class="navbar">
+                <a href="#" class="navbar__logo"><i class="fa-solid fa-kitchen-set fa-5x"></i></a>
+                <a href="#" class="navbar__recipes">Recipes (6)</a>
+                <div class="navbar__hamburger">
+                    <span><i class="fa-solid fa-bars"></i></span>
+                    <span><i class="fa-solid fa-xmark"></i></span>
+                </div>
+            </nav>
+        </header>
+        <footer>
+            <span class="license-rights">Created by Microverse under MIT license.</span>
+        </footer>
+    </body>
 </html>
