Add styles for landing page

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <nav class="navbar">
-                <a href="#" class="navbar__logo"><i class="fa-solid fa-kitchen-set fa-5x"></i></a>
+                <a href="#" class="navbar__logo"><span class="image"></span></a>
                 <a href="#" class="navbar__recipes">Categories (0)</a>
                 <div class="navbar__hamburger">
                     <span><i class="fa-solid fa-bars"></i></span>
@@ -21,6 +21,7 @@
         <main>
             <section class="landing">
                 <article class="hero">
+                    <span class="image"></span>
                     <h1 class="hero__title">Yummy Recipes!</h1>
                     <p class="hero__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, fugit.</p>
                 </article>
